cmake_minimum_required(VERSION 3.13)
project(iplib)

SETCOMPILEROPTIONS()

set(IPLIB_LIBRARIES box2d)
set(DESKTOP_HEADERS_DIR . ./desktop/)

file(GLOB IPLIB_HEADERS_GLOB ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
file(GLOB DESKTOP_HEADERS_GLOB ${CMAKE_CURRENT_SOURCE_DIR}/desktop/*.h)
file(GLOB DESKTOP_SOURCES_GLOB ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/desktop/*.cpp)
file(GLOB GL_HEADERS_GLOB ${CMAKE_CURRENT_SOURCE_DIR}/desktop/gl/*.h)


if (INVPEND_ENABLE_OPENGL)
    list(APPEND IPLIB_LIBRARIES imgui)
    list(APPEND DESKTOP_HEADERS_DIR ./desktop/gl/)
    file(GLOB DESKTOP_SOURCES_GLOB ${DESKTOP_SOURCES_GLOB} ${CMAKE_CURRENT_SOURCE_DIR}/desktop/gl/*.cpp)
endif()

if (UNIX)
    list(APPEND IPLIB_LIBRARIES pthread)
endif()

# file(GLOB INVPEND_DESKTOP_HEADER_FILES ${DESKTOP_HEADERS_GLOB})
# file(GLOB INVPEND_DESKTOP_SOURCE_FILES ${DESKTOP_SOURCES_GLOB})
# file(GLOB INVPEND_ARDUINO_HEADER_FILES ${CMAKE_SOURCE_DIR}/*.h ${CMAKE_SOURCE_DIR}/arduino/*.h)
# file(GLOB INVPEND_ARDUINO_SOURCE_FILES ${CMAKE_SOURCE_DIR}/*.cpp ${CMAKE_SOURCE_DIR}/arduino/*.cpp)

message(STATUS "Setting up ${INVPEND_INCLUDE_ONLY_DIR}/iplib ...")
file(MAKE_DIRECTORY ${INVPEND_INCLUDE_ONLY_DIR}/iplib)
file(COPY ${IPLIB_HEADERS_GLOB} DESTINATION ${INVPEND_INCLUDE_ONLY_DIR}/iplib)

file(MAKE_DIRECTORY ${INVPEND_INCLUDE_ONLY_DIR}/iplib/desktop)
file(COPY ${DESKTOP_HEADERS_GLOB} DESTINATION ${INVPEND_INCLUDE_ONLY_DIR}/iplib/desktop)

if (INVPEND_ENABLE_OPENGL)
    file(MAKE_DIRECTORY ${INVPEND_INCLUDE_ONLY_DIR}/iplib/desktop/gl)
    file(COPY ${GL_HEADERS_GLOB} DESTINATION ${INVPEND_INCLUDE_ONLY_DIR}/iplib/desktop/gl)
endif()
message(STATUS "Done setting up ${INVPEND_INCLUDE_ONLY_DIR}/iplib ...")

add_library(iplib STATIC ${DESKTOP_SOURCES_GLOB})
target_link_libraries(iplib ${IPLIB_LIBRARIES})

# target_include_directories(iplib PUBLIC ${DESKTOP_HEADERS_DIR})